[package]
name = "tower-lsp"
version = "0.19.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2021"
description = "Language Server Protocol implementation based on Tower"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"
documentation = "https://docs.rs/tower-lsp/"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["language-server", "lsp", "tower"]
exclude = ["./tower-lsp-macros"]

[features]
default = ["runtime-tokio"]
runtime-agnostic = ["async-codec-lite"]
runtime-tokio = ["tokio", "tokio-util"]

[dependencies]
async-codec-lite = { version = "0.0", optional = true }
async-trait = "0.1"
bytes = "1.0"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
futures-intrusive = { version = "0.5.0", default-features = false, features = ["alloc"] }
httparse = "1.8"
lsp-types = "0.94"
memchr = "2.5"
pin-project = "1.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
tower-service = "0.3"
tracing = "0.1"
