[package]
name = "tower-lsp-macros"
version = "0.7.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal procedural macros for tower-lsp"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
