[package]
name = "tower-lsp-macros"
version = "0.9.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal procedural macros for tower-lsp"
edition = "2021"
rust-version = "1.56.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/tower-lsp"
repository = "https://github.com/ebkalderon/tower-lsp"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
